# django_mma_site

./: .gitignore  manage.py  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_fighters.py  0003_delete_fighters.py  0004_remove_fighter_end_carrier1.py
catalog/templates/: base.html  index.html
catalog/templates/catalog/: fighter_detail.html  fighter_list.html
django_mma_site/: asgi.py  settings.py  urls.py  wsgi.py
