[tool.poetry]
name = "django_mma_site"
version = "0.1.0"
description = ""
authors = ["qqq <aswd25@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
psycopg2-binary = "^2.9.3"
Faker = "^11.3.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
